--- a/manifest.json
+++ b/manifest.json
@@ -1,18 +1,18 @@
 {
-  "name": "Golden Sun 2 Randomizer Tracker Pack",
+  "name": "Khloewi's Golden Sun 2 Randomizer Tracker Pack",
   "game_name": "Golden Sun 2: The Lost Age",
   "author": "Khloewi",
   "package_uid": "gs2r_khloewi",
-  "package_version": "0.1.0",
+  "package_version": "0.1.1",
   "platform": "gba",
   "variants": {
     "GS2TLA-Tracker": {
-      "display_name": "Golden Sun 2 Randomizer Map Tracker",
+      "display_name": "Map Tracker",
       "flags": [
         "ap"
       ]
     }
   },
   "min_poptracker_version": "0.23.1",
-  "target_poptracker_version": "0.23.1"
+  "target_poptracker_version": "0.31.0"
 }
